# cord-relay

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  file_header.txt
cli/: Cargo.toml  build.rs
cli/src/: cli.rs  command.rs  error.rs  host_perf_check.rs  lib.rs
doc/: docker.md
node/client/: Cargo.toml
node/client/src/: benchmarking.rs  lib.rs
node/perf/: Cargo.toml  build.rs
node/perf/src/: constants.rs  gen_ref_constants.rs  lib.rs
node/performance-test/: Cargo.toml
node/performance-test/src/: gen_ref_constants.rs  lib.rs
node/service/: Cargo.toml
node/service/res/: cord-local-raw.json  cord-local.json  cord.json  cordv1.json
node/service/src/: chain_spec.rs  grandpa_support.rs  lib.rs  overseer.rs  relay_chain_selection.rs  tests.rs
node/service/src/parachains_db/: mod.rs  upgrade.rs
node/test/client/: Cargo.toml
node/test/performance-test/: Cargo.toml  build.rs
node/test/performance-test/src/: constants.rs  gen_ref_constants.rs  lib.rs
node/test/service/: Cargo.toml
node/test/service/src/: chain_spec.rs
parachain/: Cargo.toml
parachain/test-parachains/: Cargo.toml
parachain/test-parachains/adder/: Cargo.toml
parachain/test-parachains/adder/collator/: Cargo.toml
parachain/test-parachains/adder/collator/src/: cli.rs  lib.rs  main.rs
parachain/test-parachains/undying/: Cargo.toml
parachain/test-parachains/undying/collator/: Cargo.toml
parachain/test-parachains/undying/collator/src/: cli.rs  lib.rs  main.rs
primitives/: Cargo.toml
primitives/src/: mark.rs
rpc/: Cargo.toml
rpc/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/constants/: Cargo.toml
runtime/constants/src/: lib.rs
runtime/constants/src/weights/: block_weights.rs  extrinsic_weights.rs  mod.rs  paritydb_weights.rs  rocksdb_weights.rs
runtime/src/: impls.rs  lib.rs  validator_manager.rs  xcm_config.rs
runtime/src/weights/: mod.rs
runtime/src/weights/xcm/: mod.rs
scripts/: adder-collator.sh  prepare-test-net.sh  two-node-local-net.sh
scripts/docker/: Dockerfile
src/: main.rs
