[package]
name = "polkadot-service"
rust-version = "1.64.0"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Substrate Client
sc-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
babe = { package = "sc-consensus-babe", git = "https://github.com/paritytech/substrate", branch = "master" }
beefy-primitives = { git = "https://github.com/paritytech/substrate", branch = "master", package = "sp-beefy" }
beefy-gadget = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
grandpa = { package = "sc-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
mmr-gadget = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = "master"}
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "master" }
service = { package = "sc-service", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
telemetry = { package = "sc-telemetry", git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Primitives
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "master" }
consensus_common = { package = "sp-consensus", git = "https://github.com/paritytech/substrate", branch = "master" }
grandpa_primitives = { package = "sp-finality-grandpa", git = "https://github.com/paritytech/substrate", branch = "master" }
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-offchain = { package = "sp-offchain", git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Pallets
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-im-online = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Substrate Other
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "master" }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }

# External Crates
futures = "0.3.21"
hex-literal = "0.3.4"
gum = { package = "tracing-gum", git = "https://github.com/paritytech/polkadot", branch = "master" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
kvdb = "0.13.0"
kvdb-rocksdb = { version = "0.17.0", optional = true }
parity-db = { version = "0.4.2", optional = true }

async-trait = "0.1.57"
lru = "0.8"

# Polkadot
polkadot-node-core-parachains-inherent = { git = "https://github.com/paritytech/polkadot", branch = "master"}
polkadot-overseer = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-primitives = {git = "https://github.com/paritytech/polkadot",  branch = "master" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-rpc = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-subsystem = {git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-subsystem-types = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-client = {path = "../client", default-features = false, optional = true }

# CORD Runtime Constants
cord-runtime-constants = { path = "../../runtime/constants", optional = true }

# CORD Runtime
cord-runtime = { path = "../../runtime", optional = true }

# Polkadot Subsystems
polkadot-approval-distribution = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-availability-bitfield-distribution = {git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-availability-distribution = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-availability-recovery = {git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-collator-protocol = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-dispute-distribution = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-gossip-support = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-network-bridge = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-collation-generation = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-approval-voting = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-av-store = {git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-backing = {git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-bitfield-signing = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-candidate-validation = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-chain-api = {git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-chain-selection = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-dispute-coordinator = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-provisioner = {git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-node-core-pvf-checker = { git = "https://github.com/paritytech/polkadot",branch = "master", optional = true }
polkadot-node-core-runtime-api = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }
polkadot-statement-distribution = { git = "https://github.com/paritytech/polkadot", branch = "master", optional = true }

[dev-dependencies]
polkadot-test-client = { path = "../test/client" }
polkadot-node-subsystem-test-helpers = { git = "https://github.com/paritytech/polkadot", branch = "master" }
env_logger = "0.9.0"
log = "0.4.17"
assert_matches = "1.5.0"
tempfile = "3.2"

[features]
default = ["db", "full-node", "cord-native"]

db = [
	"service/rocksdb"
]

full-node = [
	"polkadot-node-core-av-store",
	"polkadot-node-core-approval-voting",
	"polkadot-availability-bitfield-distribution",
	"polkadot-availability-distribution",
	"polkadot-availability-recovery",
	"polkadot-client",
	"polkadot-collator-protocol",
	"polkadot-dispute-distribution",
	"polkadot-gossip-support",
	"polkadot-network-bridge",
	"polkadot-node-collation-generation",
	"polkadot-node-core-backing",
	"polkadot-node-core-bitfield-signing",
	"polkadot-node-core-candidate-validation",
	"polkadot-node-core-chain-api",
	"polkadot-node-core-chain-selection",
	"polkadot-node-core-dispute-coordinator",
	"polkadot-node-core-provisioner",
	"polkadot-node-core-runtime-api",
	"polkadot-statement-distribution",
	"polkadot-approval-distribution",
	"polkadot-node-core-pvf-checker",
	"kvdb-rocksdb",
	"parity-db",
]

# Configure the native runtimes to use. Polkadot is enabled by default.
#
# Validators require the native runtime currently
cord-native = [ "cord-runtime", "cord-runtime-constants", "polkadot-client/cord" ]

runtime-benchmarks = [
	"cord-runtime?/runtime-benchmarks",
	"service/runtime-benchmarks",

]
try-runtime = [
	"cord-runtime?/try-runtime",
]
fast-runtime = [
	"cord-runtime?/fast-runtime",
]

malus = ["full-node"]
runtime-metrics = [
	"polkadot-client/runtime-metrics",
	"cord-runtime?/runtime-metrics",

	"polkadot-runtime-parachains/runtime-metrics"
]
