[package]
name = "cord-runtime-constants"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
smallvec = "1.8.0"

frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot", branch = "master",  default-features = false}
runtime-common = { package = "polkadot-runtime-common", git = "https://github.com/paritytech/polkadot",  branch = "master",  default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate",  branch = "master",  default-features = false }
sp-weights = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "master" }

[features]
default = ["std"]
std = [
	"sp-runtime/std"
]
