[package]
name = "cord-performance-test"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.31"
quote = "1.0.20"
env_logger = "0.9"
log = "0.4"

polkadot-node-core-pvf = {  git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-erasure-coding = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master"}

cord-runtime = { path = "../../../runtime" }

[[bin]]
name = "gen-ref-constants"
path = "src/gen_ref_constants.rs"

[features]
runtime-benchmarks = ["cord-runtime/runtime-benchmarks"]